-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14, 15
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8238682 | 14.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
| JDK-8238889 | 14.0.1 | Aleksey Shipilev | P4 | Resolved | Fixed | b04 |
SHENANDOAH_ERGO_ENABLE_FLAG opens these flags for user override, which would break:
void ShenandoahNormalMode::initialize_flags() const {
...
if (ShenandoahConcurrentRoots::can_do_concurrent_class_unloading()) {
SHENANDOAH_ERGO_ENABLE_FLAG(ShenandoahSuspendibleWorkers);
SHENANDOAH_ERGO_DISABLE_FLAG(VerifyBeforeExit);
}
...
void ShenandoahNormalMode::initialize_flags() const {
...
if (ShenandoahConcurrentRoots::can_do_concurrent_class_unloading()) {
SHENANDOAH_ERGO_ENABLE_FLAG(ShenandoahSuspendibleWorkers);
SHENANDOAH_ERGO_DISABLE_FLAG(VerifyBeforeExit);
}
...
- backported by
-
JDK-8238682 Shenandoah: important flags should not be ergonomic for concurrent class unloading
-
- Resolved
-
-
JDK-8238889 Shenandoah: important flags should not be ergonomic for concurrent class unloading
-
- Resolved
-
- relates to
-
JDK-8228720 Shenandoah: Implementation of concurrent class unloading
-
- Resolved
-
-
JDK-8228818 Shenandoah: Processing weak roots in concurrent phase when possible
-
- Resolved
-