8237223: Shenandoah: important flags should not be ergonomic for concurrent class unloading

Reviewed-by: zgu